--- a/sysroot/boot/limine.cfg
+++ b/sysroot/boot/limine.cfg
@@ -1,7 +1,12 @@
 # Timeout in seconds that Limine will use before automatically booting.
 TIMEOUT=0
 GRAPHICS=yes
+VERBOSE=yes
+SERIAL=yes
 
 :navy
 PROTOCOL=stivale2
 KERNEL_PATH=boot:///boot/kernel.elf
+
+MODULE_PATH=boot:///bin/syscall-test
+MODULE_STRING=test
