[REF] Brutal loader, very soon...

--- a/sysroot/boot/limine.cfg
+++ b/sysroot/boot/limine.cfg
@@ -1,8 +1,16 @@
 # Timeout in seconds that Limine will use before automatically booting.
 TIMEOUT=0
+DEFAULT_ENTRY=1
 
-:navy
+:navy-stivale2
 PROTOCOL=stivale2
+KERNEL_PATH=boot:///boot/kernel.elf
+
+MODULE_PATH=boot:///bin/syscall-test
+MODULE_STRING=test
+
+:navy-limine
+PROTOCOL=limine
 KERNEL_PATH=boot:///boot/kernel.elf
 
 MODULE_PATH=boot:///bin/syscall-test
