[FEAT] Basic IPC

--- a/sysroot/boot/limine.cfg
+++ b/sysroot/boot/limine.cfg
@@ -6,12 +6,12 @@ DEFAULT_ENTRY=1
 PROTOCOL=stivale2
 KERNEL_PATH=boot:///boot/kernel.elf
 
-MODULE_PATH=boot:///bin/syscall-test
+MODULE_PATH=boot:///bin/ipc-test
 MODULE_STRING=test
 
 :navy-limine
 PROTOCOL=limine
 KERNEL_PATH=boot:///boot/kernel.elf
 
-MODULE_PATH=boot:///bin/syscall-test
+MODULE_PATH=boot:///bin/ipc-test
 MODULE_STRING=test
